apps/courses/src/app/content-player/content-player/content-player.component.scss
@use '../styles/variables' as *;

.pdf {
  height: 57vh;
}

.sign-offs-required {
  margin-left: 6px;
  font-family: $primary_font;
  font-style: normal;
  font-weight: 500;
  font-size: .875rem;
  line-height: 14px;
  letter-spacing: .02em;
  color: $alert-yellow;
}

.lcp-container {
  height: 100%;
  width: 100%;
  overflow: hidden;
  padding: 16px;
  background: #1f1f1f;

  .content-player-sidenav {
    position: absolute;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100%;
    z-index: 200;
    background-color: #1f1f1f;
    &:after {
      content: " ";
      display: block;
      position: absolute;
      bottom: -5px;
      left: 0;
      height: 100px;
      width: 100%;
      background: linear-gradient(360deg, #1f1f1f 35%, rgba(31, 31, 31, 0) 100%);
    }
  }

  .content-player {
    height: 100%;
    flex: 1 1 100%;
    width: 100%;

    .content-player-header {
      margin: 22px 0;

      .title-block {
        font-family: 'Berthold Akzidenz Grotesk BE';
        font-style: normal;
        font-weight: 400;
        font-size: 1rem;
        line-height: 1.1;
        letter-spacing: -0.045em;
        margin-right: 15px;

        .sub-header {
          font-family: 'Akzidenz-Grotesk BQ';
          font-style: normal;
          font-weight: 400;
          font-size: 1rem;
          letter-spacing: 0.02em;
        }
      }

      .close-icon {
        width: 22px;
        height: auto;
      }
    }

    .content-player-body {
      position: relative;
      height: 100%;
      width: 100%;
      overflow-y: hidden;

      .body-center {
        width: 100%;
        height: 100%;
        overflow-y: auto;
      }
    }

    .content-player-footer {
      padding: 16px 0;

      button {
        width: 38px;
        height: 38px;
        background: #3A3A3A;
        border-radius: 19px;
        min-width: 38px;
        .right-chevron, .left-chevron {
          display: block;
        }
      }

      .next-button {
        background-color: #0077C8;
      }
    }

    .mobile-content-menu {
      width: 100vw;
      margin-left: -16px;
      padding: 22px 16px 6px;
      border-top: 1px solid #3A3A3A;

      .menu-icon {
        width: 26px;
        height: auto;
      }

      .menu-label {
        font-family: 'akzidenz-grotesk_bqmedium';
        font-style: normal;
        font-weight: 500;
        font-size: 1.0625rem;
        line-height: 1;
        letter-spacing: -0.005em;
      }

      .up-chevron {
        width: 24px;
        height: 24px;
      }
    }
  }
}

@media (min-width: 600px) {
  .lcp-container {
    .content-player {

      .content-player-header {
        margin: 34px 0 38px;

        .title-block {
          font-size: 1.4375rem;

          .sub-header {
            font-size: 1.25rem;
          }
        }
      }

      .content-player-body {
        display: inline-flex;
      }

      .content-player-footer {
        display: block;
        padding: 16px 0;

        button {
          width: 130px;
          background: #3A3A3A;
          border-radius: 60px;

          span {
            // typography
            font-family: 'akzidenz-grotesk_bqmedium';
            font-style: normal;
            font-weight: 500;
            font-size: 17px;
            line-height: 23px;
            /* or 135% */
            letter-spacing: -0.005em;

            color: #FFFFFF;
          }
          .right-chevron, .left-chevron {
            display: none;
          }
        }
      }
    }
  }
}

// desktop
@media (min-width: 960px) {
  .lcp-container {
    padding-right: 35px;

    .content-player-sidenav {
      position: relative;
      width: auto;
      height: calc(100% + 32px);
      flex: 1 1 25%;
      max-width: 340px;
      margin-top: -16px;
    }
    .content-player-sidenav.add-border {
      padding: 50px 16px 0 0;
      border-right: 1px solid #3A3A3A;
    }

    .content-player {
      flex: 1 1 75%;
      .content-player-sidenav-button-container {
        img {
          cursor: pointer;
          margin: 40px 0 0 19px;
        }
      }

      .content-player-header {
        .title-block {
          font-size: 2.125rem;

          .sub-header {
            font-size: 1.5625rem;
          }
        }
      }

      .content-player-body {
        display: inline-flex;
      }

      .content-player-header, .content-player-body, .content-player-footer {
          &.adjust-padding {
          padding-left: 35px;
        }
      }
    }

    .content-player-footer {
      .mobile-content-menu {
        display: none !important;
      }
    }
  }
}

//mobile landscape only
/* Landscape */
@media (min-width: 320px)
and (max-width: 950px)
and (max-height: 480px)
and (orientation: landscape) {
  .lcp-container {
    .content-player {
      .content-player-header {
        margin: 10px 0 16px 91px;
        .title-block {
          font-size: 1rem;
          .sub-header {
            font-size: 1rem;
          }
        }
        .close-icon {
          align-self: start;
        }
      }
      .mobile-content-menu {
        position: absolute;
        top: 10px;
        left: 0;
        width: auto;
        margin-left: 0;
        border-top: 0;
        padding: 16px;
        .menu-label {
          display: none;
        }
        img.up-chevron {
          display: none;
        }
      }
      .content-player-body {
        padding: 0 54px;
      }
      .content-player-footer {
        width: 100%;
        position: absolute;
        left: 50%;
        top: 50%;
        transform: translate(-50%, -50%);
        padding: 0 16px;
        button {
          width: 38px;
          padding: 0;
          display: flex;
          justify-content: center;
          align-items: center;
          .next, .previous {
            display: none;
          }
          .right-chevron, .left-chevron {
            display: block;
          }
        }
      }
    }
  }
}

